handle nested directories correctly

--- a/testexample/nest/beside.html
+++ b/testexample/nest/beside.html
@@ -3,7 +3,7 @@
 <a href=../beside.html> beside root</a>
 <a href=../beside.html> bare beside root</a>
 <a href=../beside.html> relative beside nest</a>
-<a href=../beside.html> root-based beside nest</a>
-<a href=../beside.html> full path beside nest</a>
+<a href=beside.html> root-based beside nest</a>
+<a href=beside.html> full path beside nest</a>
 <a href=http://example.org/beside.html> beside elsewhere</a>
 <a href=http://example.org/nest/beside.html> beside nest root</a>
