--- a/testexample/nest/index.html
+++ b/testexample/nest/index.html
@@ -2,7 +2,7 @@
 <a href=..> bare root</a>
 <a href=../beside.html> beside root</a>
 <a href=../beside.html> bare beside root</a>
-<a href=../beside.html> relative beside nest</a>
+<a href=beside.html> relative beside nest</a>
 <a href=beside.html> root-based beside nest</a>
 <a href=beside.html> full path beside nest</a>
 <a href=http://example.org/beside.html> beside elsewhere</a>
